calculadora/src/main/java/com/example/alumnos/error/ValidDivisorException.java
package com.example.alumnos.error;

public class ValidDivisorException extends RuntimeException {
	
	public ValidDivisorException (String message) {
		super(message);
	}

}
